working on search module

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 body{
 	font-family:verdana;
 	font-size:11px;
-	background:url(image/body_bg.jpg) top center repeat-x;
+/*	background:url(image/body_bg.jpg) top center repeat-x;*/
 	background-repeat:repeat-x;
 	background-color:#DBE2DA;
 	
